--- a/src/app/waiter/ticket/ticket.component.html
+++ b/src/app/waiter/ticket/ticket.component.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="btn">
-    <button class="sent" (click)="orderPlaced()">Place Order</button>
+    <button class="sent" (click)="orderPlaced(); alertWithSuccess()" >Place Order</button>
 </div>
 </div>
 
